# wc3-ui-designer

./: .gitignore  AGENTS.md  README.en.md  README.md  TAURI使用指南.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.mts
.github/workflows/: mcp-ci.yml
frame/: animate.lua  base.lua  event.lua  helper.lua  init.lua  mate.lua  tooltip.lua
frame/common/: CommandBar.lua  Console.lua  GameUI.lua  Interface.lua  ItemBar.lua  Lowest.lua  init.lua
frame/control/: Button.lua  Dialog.lua  Highlight.lua  Marquee.lua  Message.lua  Model.lua  Panel.lua  Scroll.lua  Sprite.lua  Template.lua  Text.lua  init.lua  outline.lua
integrations/wc3-map-ts-template/: README.md  bridge.mjs  codegen.mjs  runtime-transaction-example.mjs
mcp/: ci-smoke.mjs  e2e-check.mjs  http-gateway.mjs  project-engine.mjs  runtime-bridge-http.mjs  server.mjs  start-http-stack.mjs  streamable-smoke.mjs
mcp-runtime/: request_1776650485897-2wpidf.json  request_1776650485971-ewn6vq.json  request_1776650500900-h3le8u.json  request_1776650500977-11dfcf.json
plugins/: README.md  example-plugin.ts  example_plugin.lua
plugins/custom/: example-plugin.ts
scripts/: mcp-apply-shop-demo.mjs  mcp-ci-smoke.mjs  mcp-runtime-call-test.mjs  mcp-streamable-smoke.mjs
skills/ui-designer-control/: SKILL.md
src/: App.vue  main.ts  style.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: global_resources.rs  lib.rs  mcp_http.rs  project_engine.rs
src/components/: CloseProjectDialog.vue  ExportPanel.vue  ExportResultDialog.vue  GlobalLibraryFirstRunDialog.vue  ImportResourceDialog.vue  KeyboardShortcutsDialog.vue  LuaDebugDialog.vue  McpUsageDialog.vue  PluginDebugDialog.vue  PluginEditorDialog.vue  PropertiesPanel.vue  ProposalPanel.vue  ResourcesPanel.vue  SettingsDialog.vue  TopMenuBar.vue  WelcomeScreen.vue
src/composables/: canvasViewBounds.ts  useActionApi.ts  useAlignment.js  useAlignment.ts  useAnimations.js  useAnimations.ts  useBatchEdit.js  useBatchEdit.ts  useCanvas.js  useCanvas.ts  useCanvasInteraction.js  useCanvasInteraction.ts  useClipboard.js  useClipboard.ts  useContextMenu.js  useContextMenu.ts  useExport.js  useExport.ts  useGlobalResourceLibrary.ts  useGrid.js  useGrid.ts  useHierarchyTree.js  useHierarchyTree.ts  useHistory.js  useHistory.ts  useKeyboard.js  useKeyboard.ts  useLuaExport.js  useLuaExport.ts  useMcpRuntimeBridge.ts  useProposals.ts  (+20 more)
(+12 files in other folders)
