[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
uuid = { version = "1.0", features = ["v4"] }
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_ToolHelp",
] }
rmcp = { version = "1.5", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
axum = { version = "0.8", features = ["macros", "http1"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
dashmap = "6"
tokio-util = { version = "0.7", features = ["rt"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "1.1", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
